--- a/MoonyLeeKicks/MoonyLeeKicks.csproj
+++ b/MoonyLeeKicks/MoonyLeeKicks.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DashInfo.cs" />
     <Compile Include="LeeSinInsec.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
