--- a/MoonyLeeKicks/MoonyLeeKicks.csproj
+++ b/MoonyLeeKicks/MoonyLeeKicks.csproj
@@ -54,6 +54,8 @@
   <ItemGroup>
     <Compile Include="DashInfo.cs" />
     <Compile Include="LeeSinInsec.cs" />
+    <Compile Include="LeeSinMenu.cs" />
+    <Compile Include="MultiKick.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpellManager.cs" />
