Added R ks Combo/General Added AutoSmite

--- a/MoonyLeeKicks/MoonyLeeKicks.csproj
+++ b/MoonyLeeKicks/MoonyLeeKicks.csproj
@@ -55,6 +55,7 @@
     <Compile Include="DashInfo.cs" />
     <Compile Include="LeeSinInsec.cs" />
     <Compile Include="LeeSinMenu.cs" />
+    <Compile Include="LeeSinSmite.cs" />
     <Compile Include="MultiKick.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
