huge update Better hero selection in insec mode. (target -> ally -> target clicking was sometimes annoying)
Insec to mouse is now possible.

Added Star Combo with multiple target ultimate.

Fixed Combo W GapClose bugs

Added Help menu if questions appear.

The following features will be added soon:

Kubba Kush

--- a/MoonyLeeKicks/MoonyLeeKicks.csproj
+++ b/MoonyLeeKicks/MoonyLeeKicks.csproj
@@ -52,13 +52,15 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DashInfo.cs" />
-    <Compile Include="LeeSinInsec.cs" />
+    <Compile Include="Insec\DashInfo.cs" />
+    <Compile Include="Insec\LeeSinInsec.cs" />
     <Compile Include="LeeSinMenu.cs" />
     <Compile Include="MultiKick.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpellManager.cs" />
+    <Compile Include="Insec\SelectionHandler.cs" />
+    <Compile Include="UserWishes\StarCombo.cs" />
     <Compile Include="WardManager.cs" />
   </ItemGroup>
   <ItemGroup>
