--- a/MoonyLeeKicks/MoonyLeeKicks.csproj
+++ b/MoonyLeeKicks/MoonyLeeKicks.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="Extras\Smite.cs" />
     <Compile Include="Insec\AntiDash.cs" />
+    <Compile Include="Insec\DashAnalysis.cs" />
     <Compile Include="Insec\DashInfo.cs" />
     <Compile Include="Insec\LeeSinInsec.cs" />
     <Compile Include="Insec\MEC.cs" />
